Fix tests for java 8